# magic-website

./: .dockerignore  .gitignore  Dockerfile  Krish_Tyagi_Resume_Final.md  Krish_Tyagi_Resume_Magic_Update.md  README.md  docker-compose.yml  generate_resume_pdf.py  nginx.conf  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: keep-alive.yml
agents/: README.md
agents/workflows/: __init__.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/architecture/: page.tsx
apps/web/components/: about-owner.tsx  agent-showcase.tsx  bento-grid.tsx  concierge-form.tsx  ecosystem-hub.tsx  experience-log.tsx  hero.tsx  magic-chat.tsx  magic-cursor.tsx  magic-logo.tsx  nav-bar.tsx  orb-scene.tsx  portfolio-grid.tsx  project-showcase.tsx
apps/web/lib/: site-data.ts
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  routes.py
backend/app/core/: config.py  notify.py
backend/app/graphs/: __init__.py  orchestrator.py
backend/app/schemas/: __init__.py  agent.py
backend/magic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md
