[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for Magic"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "langgraph>=0.2.34,<1.0.0",
  "llama-index>=0.12.0,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

